--- a/templates/new.html
+++ b/templates/new.html
@@ -4,22 +4,6 @@
 
 {% block content %}
 <main>
-
-    <section class="hero-section d-flex justify-content-center align-items-center">
-        <div class="section-overlay"></div>
-
-        <div class="container">
-            <div class="row">
-
-                <div class="col-lg-6 col-12 mb-5 mb-lg-0 d-flex justify-content-center align-items-center">
-                    <div class="hero-section-text mt-5">
-                        <h1 class="hero-title text-white mt-4 mb-4">Welcome,{{user.username}}<br>School Store</h1>
-                
-                        <a href="{% url 'student-reg' %}" class="custom-btn custom-border-btn btn">Register your form</a>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </section>
+    <h4 class="order">Your order is confirmed !!</h4>
+</main>
 {% endblock %}
