--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,41 +1,3 @@
-/* styles.css */
-/* Styles for the form container */
-/* .register {
-    margin: 0 auto;
-    display: block;
+.order {
     text-align: center;
-    width: 40%;
-    background-color: black;
-    border-radius: 12px;
 }
-.register h2 {
-    color: white;
-}
-#personForm {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-}
-
-/* Styles for form fields */
-/* #personForm input[type="text"], 
-#personForm select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-
-/* Style for the submit button */
-/* #personForm input[type="submit"] {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer; */
-/* } */ 
-
